# artery

./: .gitignore
scenarios/: CMakeLists.txt
scenarios/warning-service/: CMakeLists.txt  NormalTravelTime.csv  config.xml  envmod.txt  omnetpp.ini  regions_of_interest.xml  reports.sql  scenario.py  scenario1.py  scenarioInside.py  scenarioOutsideDoNotPropagate.py  scenarioOutsideFakeMsg.py  scenarioOutsidePropagate.py  services-rsu.xml  services.xml
scenarios/warning-service/logs/: warning_log_2021-05-25.txt
scenarios/warning-service/maps/luxembourg/: denso.sumocfg  due.actuated.summary.xml  due.actuated.sumocfg  due.actuated.tripinfo.xml  esparso.sumocfg  lust2.net.xml  muito.denso.sumocfg  muito.esparso.sumocfg  normal.sumocfg  vtypes.add.xml
scenarios/warning-service/maps/luxembourg/NewRoutes/: new.rou - Copia.xml  new.rou copy 2.xml  new.rou copy.xml  new.rou_CPF.xml  new.rou_DensoAlterado.xml  new.rou_EsparsoAlterado.xml  new.rou_MDensoAlterado.xml  new.rou_MEsparsoAlterado.xml  new.rou_NormalAlterado.xml  new.rou_Unico.xml
scenarios/warning-service/reports/: main.py
scenarios/warning-service/reports/models/: connection.py  vector.py
scenarios/warning-service/src/apps/: AlertTypes.h  CriticalityTypes.h  RsuWarningService.cc  RsuWarningService.h  RsuWarningService.ned  ValidationTypes.h  WarningService.cc  WarningService.h  WarningService.ned
scenarios/warning-service/src/msgs/: OBUBeacon.msg  ReqVR.msg  UpdateTableMessage.msg  WarningMessage.msg  WarningValidationMessage.msg
